--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "name": "node-example",
+  "version": "1.0.0",
+  "description": "This example is so cool.",
+  "main": "server.js",
   "dependencies": {
     "crypto-js": "^4.1.1",
     "qrcode": "^1.5.0"
+  },
+   "scripts": {
+    "start" : "server"
   }
 }
