--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "crypto-js": "^4.1.1",
     "qrcode": "^1.5.0"
   },
-   "scripts": {
-    "start" : "node server"
+  "scripts": {
+    "start" : "node server.js"
+  },
+  "engines": {
+  "node": "12.x"
   }
 }
